CCNET-1396: Set the style correctly for the log so it doesn't hide the overflow (i.e. behind a big black patch).

--- a/project/WebDashboard/cruisecontrol.css
+++ b/project/WebDashboard/cruisecontrol.css
@@ -95,7 +95,8 @@ td>a.selected:hover { color:#006; }
 
 .log
 {
-	overflow: auto;
+	overflow: visible;
+	height:auto;
 }
 
 .wholepage
